# systemd-pilot

./: .gitignore  Cargo.toml  README.adoc  README.md  io.github.mfat.systemdpilot.metainfo.xml  io.github.mfat.systemdpilot.yml  main.py  org.mfat.systemdpilot.metainfo.xml  org.mfat.systemdpilot.yml  pixi.toml  requirements.txt
.githooks/: pre-commit  pre-push
data/: README.adoc  README.md  io.github.mfat.systemdpilot.appdata.xml  io.github.mfat.systemdpilot.desktop  io.github.mfat.systemdpilot.metainfo.xml  org.mfat.systemdpilot.appdata.xml
flatpak/: README.adoc  README.md  flathub.json  generated-sources.json  io.github.mfat.systemdpilot.yml
src/: app.rs  main.py  main.rs  remote_host.rs  service_manager.rs
src/ui/: components.rs  dialogs.rs  mod.rs  styles.rs
src/utils/: theme.rs
