[package]
name = "systemd-pilot"
version = "3.0.0"
edition = "2021"
description = "A graphical tool for managing systemd services locally and remotely"
authors = ["mFat"]
license = "GPL-3.0"
homepage = "https://github.com/mfat/systemd-pilot"
repository = "https://github.com/mfat/systemd-pilot"
keywords = ["systemd", "gui", "gtk", "service-manager", "ssh"]
categories = ["command-line-utilities", "gui"]

[dependencies]
gtk4 = { version = "0.9", package = "gtk4" }
glib = "0.20"
gdk4 = { version = "0.9", package = "gdk4" }
gio = "0.20"
pango = "0.20"
sourceview5 = { version = "0.9", package = "sourceview5" }
tokio = { version = "1.0", features = ["full"] }
async-ssh2-tokio = "0.8"
ssh2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secret-service = "3.0"
keyring = "2.0"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"

[build-dependencies]
glib-build-tools = "0.20"

[[bin]]
name = "systemd-pilot"
path = "src/main.rs"

[package.metadata.appstream]
id = "io.github.mfat.systemdpilot"
name = "systemd Pilot"
summary = "Manage systemd services locally and remotely"
description = """
A graphical tool for managing systemd services both locally and on remote hosts via SSH.
Features include service control, log viewing, and service creation.
"""
